<resources>
    <string name="app_name">Simple Kids Math</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_parent">Parents</string>
    <string name="title_activity_child_maint">Child Maint Activity</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="reset_scores">RESET SCORES</string>
    <string name="result_image_desc">crop result</string>
    <string name="main_button_select_image">Select Image</string>
    <string name="main_activity_desciption">Sample activity to start image cropping.\nExample: User profile activity to select avatar.</string>

    <string name="lbl_min_value">Min Add:</string>
    <string name="lbl_max_value">Max Add:</string>
    <string name="hint_min_value">Min Add. Value</string>
    <string name="hint_max_value">Max Add.Value</string>

    <string name="lbl_minmult_value">Min Mult:</string>
    <string name="lbl_maxmult_value">Max Mult:</string>
    <string name="hint_minmult_value">Min Mult. Value</string>
    <string name="hint_maxmult_value">Max Mult. Value</string>


    <string name="lbl_mindiv_value">Min Div:</string>
    <string name="lbl_maxdiv_value">Max Div:</string>
    <string name="hint_mindiv_value">Min div. Value</string>
    <string name="hint_maxdiv_value">Max div. Value</string>




    <string name="lbl_add">Addition</string>
    <string name="lbl_sub">Subtraction</string>
    <string name="lbl_mult">Multiplicaton</string>
    <string name="lbl_div">Deviation</string>
    <string name="lbl_allow_minus">Allow Minus Results</string>
    <string name="main_button_delete_child">Remove Child</string>
    <string name="lbl_no_children_exeeded">Number of children exeeded</string>
    <string name="option_error_invalidint">Invalid Integers</string>
    <string name="option_error_minusparams">Minus values not allowed when allow minus is unchecked</string>
    <string name="option_error_fromltto">Min value must be lowered than max value</string>
    <string name="lbl_textseconds">Sec.:</string>
    <string name="lbl_try_again">Try again ?</string>


    <string name="tbl_correct">Correct</string>
    <string name="tbl_error">Errors</string>
    <string name="tbl_total">Total</string>
    <string name="tbl_addition">Add.</string>
    <string name="tbl_subtraction">Sub.</string>
    <string name="tbl_multiplication">Mult.</string>
    <string name="tbl_deviation">Dev.</string>

    <string name="lbl_lastscore">Last Reset Date:</string>
    <string name="lbl_correctresult">The Correct Result is:</string>

</resources>
